--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,32 @@
 :root {
+  --item-bg-color: #eaeaea;
+  --text-default: #212323;
+  --page-bg-color: #f8f9fa;
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: var(--page-bg-color);
+  color: var(--text-default);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --item-bg-color: #1a1a1a;
+    --text-default: #dacebe;
+    --page-bg-color: #272624;
+  }
+
+  img.logo {
+    filter: sepia(50%);
+    filter: brightness(75%);
+  }
 }
 
 a {
@@ -36,14 +52,15 @@ h1 {
 }
 
 button {
+  background-color: var(--item-bg-color);
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  color: var(--text-default);
+  cursor: pointer;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
+  padding: 0.6em 1.2em;
   transition: border-color 0.25s;
 }
 button:hover {
@@ -54,15 +71,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.card {
+  padding: 2em;
+}
+
+#root {
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
 }
