feat: add functionality to header new post button
- Create newPost.jsx
- Clicking the button reroutes to /newPost
- Break The Odin Project logo into its own React component and store the
  svg locally
- Move local storage search on page load functionality to TopLevel
  component

--- a/src/index.css
+++ b/src/index.css
@@ -177,6 +177,12 @@ main hr {
   width: 80%;
 }
 
+p {
+  display: flex;
+  gap: 0.25rem;
+  justify-content: center;
+}
+
 #root {
   align-content: space-between;
   display: grid;
