feat: hide and show sidebar on mobile
- Also rotate the + button 45deg to make it an X

--- a/src/index.css
+++ b/src/index.css
@@ -76,11 +76,27 @@ button {
   border: 1px solid var(--border-color);
   color: var(--text-default);
   cursor: pointer;
+  display: grid;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   padding: 0.6em 1.2em;
+  place-items: center;
   transition: border-color 0.25s;
+}
+
+button.toggle {
+  background-color: #00000000;
+  border-color: #00000000;
+  border-radius: 50%;
+  padding: 0;
+  position: absolute;
+  right: -29px;
+  top: 0;
+}
+
+button.toggle > svg {
+  stroke: var(--text-default);
 }
 
 .card {
@@ -181,6 +197,33 @@ main hr {
   width: 80%;
 }
 
+nav {
+  background-color: var(--page-bg-color);
+  border-right: 1px solid var(--text-default);
+  box-sizing: border-box;
+  height: 100%;
+  position: relative;
+  width: min(80vw, 300px);
+}
+
+nav.noToggle {
+  left: 0;
+}
+
+nav.toggled {
+  left: max(-80vw, -300px);
+  position: absolute;
+  transition: ease-in-out 0.5s;
+}
+
+nav.toggled.shown {
+  transform: translateX(min(80vw, 300px));
+}
+
+nav.toggled.shown > button.toggle {
+  transform: rotate(45deg);
+}
+
 p {
   display: flex;
   gap: 0.25rem;
@@ -197,14 +240,21 @@ textarea.post {
 }
 
 #root {
-  align-content: space-between;
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   margin: 0 auto;
   padding: 0;
   text-align: center;
   min-height: 100vh;
   min-height: 100dvh;
   width: 100vw;
+}
+
+#root > div {
+  align-self: stretch;
+  flex-grow: 1;
+  position: relative;
 }
 
 .wideScreenOnly {
