--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,25 @@ button {
   transition: border-color 0.25s;
 }
 
+button.sidebarButton {
+  background-color: #00000000;
+  border: none;
+  display: flex;
+  gap: 1rem;
+  place-content: center;
+  place-items: center;
+}
+
+button.sidebarButton + hr {
+  margin: 0 0 0 5%;
+  opacity: 50%;
+  width: 80%;
+}
+
+button.sidebarButton svg {
+  stroke: var(--text-default);
+}
+
 button.toggle {
   background-color: #00000000;
   border-color: #00000000;
@@ -201,10 +220,16 @@ main hr {
 }
 
 nav {
+  align-content: start;
+  align-items: start;
   background-color: var(--page-bg-color);
   border-right: 1px solid var(--text-default);
   box-sizing: border-box;
+  display: grid;
   height: 100%;
+  justify-content: start;
+  justify-items: start;
+  padding: 3px;
   position: relative;
   width: var(--nav-positive);
 }
