feat: display logged in user's profile page
- Currently profile page is just the profile's post sorted by most
  recent first
- Modified how the Odin Project logo component was finding the svg
- Return user and profile from local storage when reading them
- Simplify how home.jsx displays recent posts
  - Delete recentPostsDisplay because it wasn't adding value

--- a/src/index.css
+++ b/src/index.css
@@ -240,6 +240,11 @@ main * {
   max-width: 1500px;
 }
 
+main.profilePage {
+  align-content: start;
+  align-items: start;
+}
+
 main.singleColumn {
   grid-template-columns: 1fr;
 }
