--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,10 @@
     filter: sepia(50%);
     filter: brightness(75%);
   }
+
+  button.sidebar-button img {
+    filter: brightness(85%);
+  }
 }
 
 a {
@@ -65,6 +69,13 @@ a:hover {
   height: 50vmin;
   resize: none;
   width: min(80vmin, 400px);
+}
+
+.avatar-medium {
+  border: 1px solid var(--text-default);
+  border-radius: 50%;
+  height: 2rem;
+  width: 2rem;
 }
 
 body {
@@ -110,8 +121,16 @@ button.sidebar-button + hr {
   width: 80%;
 }
 
-button.sidebar-button svg {
+button.sidebar-button img {
+  border: 1px solid var(--text-default);
+  border-radius: 50%;
+}
+
+button.sidebar-button svg,
+button.sidebar-button img {
+  height: 24px;
   stroke: var(--text-default);
+  width: 24px;
 }
 
 button.toggle {
@@ -180,7 +199,8 @@ footer {
 form {
   display: grid;
   gap: 1vh;
-  justify-items: center;
+  justify-content: center;
+  justify-items: start;
 }
 
 form * {
@@ -369,7 +389,10 @@ p.create-post-message a {
 }
 
 .post div.name {
+  align-items: center;
+  display: flex;
   font-weight: bold;
+  gap: 1rem;
 }
 
 .post div.text {
@@ -395,7 +418,24 @@ p.create-post-message a {
   position: relative;
 }
 
-.profile-list
+.profile-list {
+  display: grid;
+  gap: var(--standard-gap);
+  justify-content: center;
+  list-style: none;
+}
+
+.profile-list li {
+  align-items: center;
+  display: flex;
+  gap: var(--standard-gap);
+  justify-content: center;
+}
+
+.profile-list button {
+  display: flex;
+  gap: 1rem;
+}
 
 .search-bar label {
   align-content: start;
@@ -416,6 +456,21 @@ textarea {
 textarea.post {
   height: min(500px, 50vh);
   width: min(700px, 80%);
+}
+
+textarea#text {
+  width: min(80vw, 500px);
+}
+
+.two-column > div,
+div.two-column {
+  display: grid;
+  justify-content: center;
+}
+
+.two-column > div > h2 {
+  justify-self: center;
+  text-align: center;
 }
 
 #root {
@@ -461,7 +516,8 @@ textarea.post {
 }
 
 @media (min-width: 520px) {
-  main.two-column {
+  main.two-column,
+  div.two-column {
     grid-template-columns: 1fr 1fr;
   }
 
